C2LC-289: Fixed play button 'nudge' of stop button on focus.

--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -20,14 +20,10 @@ button.btn.PlayButton {
 }
 
 button.btn.PlayButton:focus {
-    border: $c2lc-focus-indicator-width solid $c2lc-focus-indicator-color;
-    box-shadow: none;
-    height: 5.1rem;
-    margin-right: 1.4rem;
-    padding: 0.05rem;
-    padding-left: 0.1rem;
-    padding-top: 0.15rem;
-    width: 5.1rem;
+    box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
+    // TODO: This prevents "jiggling" on focus or "nudging" the stop button, but the SVG is not perfecly centred.
+    padding-left: 0.2rem;
+    padding-top: 0.2rem;
 }
 
 button.btn.PlayButton:not(:focus) {
