--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -7,7 +7,8 @@
 }
 
 .ProgramBlockEditor__container {
-    background-color: #F1F1F1;
+    background-color: #CCE6E2;
+    border: 2px solid #CCE6E2;
     border-radius: 3px;
     display: grid;
     height: 100%;
@@ -16,6 +17,7 @@
 }
 
 .ProgramBlockEditor__header {
+    background-color: #CCE6E2;
     display: grid;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -122,16 +124,16 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 }
 
 .ProgramBlockEditor__character-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    background: #FFF;
-    box-shadow: 2px 0px 1px #8F8F8F;
+    background-color: #30444E;
     border: 0px;
     border-radius: 3px 0 0 3px;
+    box-shadow: 2px 0px 1px #8F8F8F;
+    display: flex;
+    flex-direction: column;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    justify-content: center;
     padding-top: 2rem;
     pointer-events: none;
 }
@@ -223,6 +225,10 @@ button.ProgramBlockEditor__program-block--paused {
     position: absolute;
     left: #{-$c2lc-action-panel-width / 2};
     top: #{-$c2lc-action-panel-height * 1.4};
+}
+
+.ProgramBlockEditor__program-sequence-scroll-container {
+    background-color: #22343C;
 }
 
 .ProgramBlockEditor__program-sequence-scroll-container--isDragging {
