--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,4 @@
-/* Colors */
-
+/* Colors for default 'Mixed' theme. */
 $c2lc-primary-button-color: #FFFFFF;
 
 $c2lc-forward-command-color: #88C3BC;
